--- a/biblio.bib
+++ b/biblio.bib
@@ -501,3 +501,18 @@ Year={2007},
   year={1901},
   publisher={Taylor \& Francis}
 }
+
+@article{costin2012ghost,
+  title={Ghost in the Air (Traffic): On insecurity of ADS-B protocol and practical attacks on ADS-B devices},
+  author={Costin, Andrei and Francillon, Aur{\'e}lien},
+  journal={Black Hat USA},
+  pages={1--12},
+  year={2012}
+}
+
+@article{smith2020view,
+  title={A View from the Cockpit: Exploring Pilot Reactions to Attacks on Avionic Systems},
+  author={Smith, Matthew and Strohmeier, Martin and Harman, Jonathan and Lenders, Vincent and Martinovic, Ivan},
+  year={2020},
+  publisher={Internet Society}
+}
