Fixed the citations a little (to add the conference name).

--- a/biblio.bib
+++ b/biblio.bib
@@ -503,16 +503,18 @@ Year={2007},
 }
 
 @article{costin2012ghost,
-  title={Ghost in the Air (Traffic): On insecurity of ADS-B protocol and practical attacks on ADS-B devices},
+  title={Ghost in the Air (Traffic): On insecurity of {ADS-B} protocol and practical attacks on {ADS-B} devices},
   author={Costin, Andrei and Francillon, Aur{\'e}lien},
   journal={Black Hat USA},
   pages={1--12},
   year={2012}
 }
 
-@article{smith2020view,
+@inproceedings{smith2020view,
   title={A View from the Cockpit: Exploring Pilot Reactions to Attacks on Avionic Systems},
   author={Smith, Matthew and Strohmeier, Martin and Harman, Jonathan and Lenders, Vincent and Martinovic, Ivan},
+  booktitle={Network and Distributed Systems Security (NDSS) Symposium}, 
+  address={San Diego, CA, USA},
   year={2020},
   publisher={Internet Society}
 }
